frontend/test/should_fail/index_mm_size.grg
#using "index_min_max_size_model.gm"

rule r {
	n:N -e:E->;
	if { indexSize(n)==0; }
	
	modify {
	}
}
